# cocos2d-x

./: .gitignore  CMakeLists.txt
cmake/Modules/: CocosBuildHelpers.cmake  CocosUsePrebuiltLibs.cmake
cocos/: CMakeLists.txt  cocos2d.h
cocos/2d/: CC3DSceneSprite.cpp  CC3DSceneSprite.h  CCClippingNode.cpp  CCClippingRectangleNode.cpp  CCGrid.cpp  CCNode.cpp  CCParticleBatchNode.cpp  CCParticleBatchNode.h  CCRenderTexture.cpp  CCRenderTexture.h  CCSpriteBatchNode.cpp  CCSpriteBatchNode.h
cocos/3d/: CCSkybox.cpp  CCTerrain.cpp
cocos/audio/: CMakeLists.txt
cocos/base/: CCConfiguration.cpp  CCDirector.cpp  CMakeLists.txt  ccMacros.h
cocos/gameplay/src/: AnimationController.cpp  BoundingBox.cpp  BoundingBox.h  BoundingBox.inl  BoundingSphere.cpp  BoundingSphere.h  BoundingSphere.inl  Bundle.cpp  Bundle.h  CCMath.h  Camera.cpp  Camera.h  Curve.cpp  Curve.h  Effect.cpp  Effect.h  Font.cpp  Font.h  Form.h  Frustum.cpp  Frustum.h  Game.cpp  Game.h  Game.inl  Gamepad.cpp  Gamepad.h  Joint.cpp  Joint.h  Keyboard.h  Light.cpp  Light.h  Material.cpp  MaterialParameter.cpp  MaterialParameter.h  MathUtil.h  Mesh.cpp  Mesh.h  MeshSkin.cpp  MeshSkin.h  Node.cpp  (+37 more)
cocos/math/: CCMat4.cpp  CCMat4.h  CCMat4.inl  CCMath.h  CCMathUtil.cpp  CCMathUtil.h  CCQuaternion.cpp  CCQuaternion.h  CCQuaternion.inl  CCTransformUtils.cpp  CCVec2.cpp  CCVec2.h  CCVec2.inl  CCVec3.cpp  CCVec3.h  CCVec3.inl  CCVec4.cpp  CCVec4.h  CCVec4.inl
cocos/platform/: CCApplication.h  CCGLView.cpp  CMakeLists.txt
cocos/platform/desktop/: CCGLViewImpl-desktop.cpp
cocos/platform/winrt/: CCCommon.cpp  CCWinRTUtils.cpp  inet_ntop_winrt.cpp  inet_pton_winrt.cpp
cocos/renderer/: CCCommandBuffer.cpp  CCCommandBuffer.h  CCGLProgram.cpp  CCGLProgram.h  CCGLProgramState.cpp  CCGLProgramState.h  CCGLProgramStateCache.h  CCMeshCommand.cpp  CCMeshCommand.h  CCPrimitiveCommand.cpp  CCQuadCommand.cpp  CCQuadCommand.h  CCRenderer.cpp  CCRenderer.h  CCTrianglesCommand.cpp  CCVertexIndexBuffer.cpp  CCVertexIndexBuffer.h  ccGLStateCache.cpp  ccShader_3D_Particle.vert  ccShader_3D_PositionNormalTex.vert  ccShader_3D_PositionTex.vert  ccShader_3D_Skybox.vert  ccShader_3D_Terrain.vert  ccShader_Label.vert  ccShader_PositionColor.vert  ccShader_PositionColorLengthTexture.vert  ccShader_PositionColorTextureAsPointsize.vert  ccShader_PositionTexture.vert  ccShader_PositionTextureA8Color.vert  ccShader_PositionTextureColor.vert  ccShader_PositionTextureColor_noMVP.vert  ccShader_PositionTexture_uColor.vert  ccShader_Position_uColor.vert
cocos/scripting/lua-bindings/proj.ios_mac/cocos2d_lua_bindings.xcodeproj/: project.pbxproj
cocos/storage/: CMakeLists.txt
cocos/ui/: CMakeLists.txt  UILayout.cpp
extensions/: CMakeLists.txt
extensions/GUI/CCScrollView/: CCScrollView.cpp
templates/cpp-template-default/: CMakeLists.txt
tests/cpp-empty-test/: CMakeLists.txt
tests/cpp-empty-test/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  RacerGame.cpp  RacerGame.h
tests/cpp-empty-test/Resources/res/: game.config
tests/cpp-empty-test/Resources/res/common/: racer.lua
tests/cpp-empty-test/proj.mac/: main.cpp
tests/cpp-empty-test/proj.win8.1-universal/HelloCpp.Windows/: Package_vc12.store.appxmanifest.in
tests/cpp-tests/Classes/ClippingNodeTest/: ClippingNodeTest.cpp
tests/cpp-tests/Classes/RenderTextureTest/: RenderTextureTest.cpp
tests/cpp-tests/Classes/ShaderTest/: ShaderTest.vsh.h
tests/cpp-tests/Classes/Sprite3DTest/: DrawNode3D.cpp  Sprite3DTest.cpp
tests/cpp-tests/Resources/Shaders/: example_ColorBars.vsh  example_MultiTexture.vsh
tests/cpp-tests/Resources/Shaders3D/: OutLine.vert  SkinnedOutline.vert
tests/cpp-tests/Resources/Sprite3DTest/: cube_map.vert  cylinder.vert  fog.vert  simple_shadow.vert  toon.vert
tests/lua-tests/project/Classes/: lua_test_bindings.cpp
